--- a/geometria/bin/.gitignore
+++ b/geometria/bin/.gitignore
@@ -2,3 +2,7 @@
 /FiguraGeometrica.class
 /Rectangulo.class
 /Triangulo.class
+/Circulo_AMB.class
+/FiguraGeometrica_AMB.class
+/Rectangulo_AMB.class
+/Triangulo_AMB.class
