--- a/geometria/bin/.gitignore
+++ b/geometria/bin/.gitignore
@@ -1,8 +1,7 @@
-/Circulo.class
-/FiguraGeometrica.class
-/Rectangulo.class
-/Triangulo.class
+/geometria/
 /Circulo_AMB.class
-/FiguraGeometrica_AMB.class
-/Rectangulo_AMB.class
-/Triangulo_AMB.class
+/prueba.class
+/test.class
+/test/
+/Test.class
+/TestCirculo.class
